# CS-32

./: README.md
Assets/: Tracing Sort.pdf.pptx
Assets/Code Samples/: CMakeLists.txt  stick-figure.txt
Code Samples/: CMakeLists.txt
Code Samples/Circle/: Circle.h
Code Samples/Compilation Dependency Rules/: Compilation Dependency Rules.txt
Code Samples/Infix Expression Evaluation/: Infix Expression Evaluation.txt
Exams/: README.md
Exams/Midterm 1/: CMakeLists.txt  Problem 1.cpp  problem-2.cpp
Exams/Midterm 2/: CMakeLists.txt  Problem 1.cpp  Problem 2.cpp  problem-1.cpp  problem-3.cpp
Homework/: README.md
Homework/Homework 1/: CMakeLists.txt  CarMap.cpp  CarMap.h  Map.cpp  Map.h  newMap.cpp  newMap.h  spec.md  testCarMap.cpp  testMap.cpp  testnewMap.cpp
Homework/Homework 2/: CMakeLists.txt  Map.h  eval.cpp  hw.txt  mazequeue.cpp  mazestack.cpp  report.txt  spec.md
Homework/Homework 3/: CMakeLists.txt  linear.cpp  maze.cpp  spec.md  sport.cpp  tree.cpp
Homework/Homework 4/: CMakeLists.txt  Map.cpp  Map.h  badlist.cpp  badvector.cpp  hw.txt  list.cpp  oddlist.cpp  oddvector.cpp  sorts.cpp  spec.md
Homework/Homework 5/: CMakeLists.txt  hw.txt  spec.md
Lecture Slides/: README.md
Projects/: README.md
Projects/Project 1/: CMakeLists.txt  Game.cpp  Game.h  Gark.cpp  Gark.h  History.cpp  History.h  Mesa.cpp  (+7 more)
Projects/Project 3 Part 1/: CMakeLists.txt  spec.md
Projects/Project 3 Part 1/Sample Executable/: SuperPeachSisters
Projects/Project 3 Part 1/SuperPeachSisters/: Actor.h  Makefile
Projects/Project 4/: AttributeTranslator.cpp  AttributeTranslator.h  CMakeLists.txt  MatchMaker.cpp  MatchMaker.h  MemberDatabase.cpp  MemberDatabase.h  PersonProfile.cpp  PersonProfile.h  README.md  RadixTree.h  main.cpp  provided.h  report.txt  spec.md  utility.cpp  utility.h
Worksheets/: Find the minimum and maximum of f(x, y, z) = y + 2z subject _ Quizlet.html
(+99 files in other folders)
