cmake_minimum_required(VERSION 3.21)
project(Homework_3)

set(CMAKE_CXX_STANDARD 14)

add_executable(Homework_4_1 Map.cpp Map.h)
add_executable(Homework_4_3a oddlist.cpp)
add_executable(Homework_4_3b oddvector.cpp)
add_executable(Homework_4_3c badlist.cpp)
add_executable(Homework_4_3d badvector.cpp)
add_executable(Homework_4_4a list.cpp)
add_executable(Homework_4_7 sorts.cpp)